--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
+    "animejs": "^2.2.0",
     "bootstrap": "3",
     "jquery": "^3.3.1",
-    "jquery-bar-rating": "^1.2.2"
+    "jquery-bar-rating": "^1.2.2",
+    "tilt.js": "^1.2.1"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
